# C0d3x_Fun_Club

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agents_orchestrator_for_ctf/: .dockerignore  .gitignore  Dockerfile  README.md  build_profiles.sh  config.yaml  main.py  pyproject.toml  ТЗ.md
agents_orchestrator_for_ctf/deploy/: README.md  login_accounts.sh  start_cliproxy.sh
agents_orchestrator_for_ctf/deploy/cliproxy/executors-codex/: config.yaml
agents_orchestrator_for_ctf/deploy/cliproxy/master-claude/: config.yaml
agents_orchestrator_for_ctf/deploy/cliproxy/reserve-codex/: config.yaml
agents_orchestrator_for_ctf/deploy/cliproxy/support-claude/: config.yaml
agents_orchestrator_for_ctf/scripts/: smoke_profiles.sh
agents_orchestrator_for_ctf/src/ctf_swarm/: agents.py  config.py  console.py  ctfd.py  docker_runtime.py  llm.py  memory.py  orchestrator.py  profiles.py  prompts.py  schemas.py  state.py  task_loader.py  utils.py  writeup.py
agents_orchestrator_for_ctf/tests/: test_agents_validation.py  test_ctfd.py  test_docker_runtime.py  test_memory.py  test_orchestrator.py  test_profiles.py  test_task_loader.py  test_utils.py
backend/: cli.py  config.py  console.py  cost_tracker.py  ctfd.py  memory.py  message_bus.py  models.py  solver_base.py
backend/agents/: claude_solver.py  codex_solver.py  coordinator_core.py  coordinator_loop.py  openai_coordinator.py  openai_solver.py  swarm.py
backend/tools/: core.py
container/: ctf-install  ctf-tools  profiles.md
ctf-agent/: .gitignore  pyproject.toml
scripts/: fetch-knowledge.sh
(+32 files in other folders)
